Fix event page not showing cards as a  list

--- a/client/src/CSS/Card.css
+++ b/client/src/CSS/Card.css
@@ -13,6 +13,7 @@
 	border-style: solid;
 	border-width: 1px;
 	box-shadow: 5px 5px 5px grey;
+	background-color: white;
 }
 
 .card-img {
@@ -25,7 +26,7 @@
 .card-text {
 	white-space: nowrap;
 	overflow: hidden;
-	padding-top: 10px;
+	padding: 10px;
 	text-overflow: ellipsis;
 	width: 80%;
 }
